adicionando melhores intruções

--- a/map_ploting_m3.ipynb
+++ b/map_ploting_m3.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "anSjI6t8ipu4"
@@ -23,6 +24,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FJWUuSSVlAcV"
@@ -33,13 +35,16 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "# **COLOQUE OS ARQUIVOS \"output\" NA PASTA DO COLLAB** "
-      ],
       "metadata": {
         "id": "z3smaEM_kvfU"
-      }
+      },
+      "source": [
+        "# **COLOQUE UMA INSTÂNCIA (arquivo) DA PASTA \"outputs\" NA PASTA DO COLLAB** \n",
+        "## Após isso, basta inserir o nome do arquivo abaixo, lembre-se de colocar o que esta antes do \".csv\", como no exemplo a seguir:\n",
+        "* bar-n100-1(output)"
+      ]
     },
     {
       "cell_type": "code",
@@ -61,7 +66,7 @@
         }
       ],
       "source": [
-        "arquivo = input('ESCREVA O NOME DO ARQUIVO \"output\":')\n",
+        "arquivo = input('ESCREVA O NOME DA INSTÂNCIA (arquivo):')\n",
         "arquivo = arquivo + '.csv'"
       ]
     },
@@ -88,6 +93,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "exwuq8uslP7t"
@@ -121,6 +127,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2pcC8qvZtudn"
@@ -202,6 +209,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "RpkGBQ4CnP6r"
@@ -255,6 +263,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "hmlhD2xW6o4f"
@@ -315,6 +324,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1GFcb_VhSDk-"
